# lixpi.ai-bridge

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  init-config.bat  init-config.sh  init-infrastructure.bat  init-infrastructure.sh  pnpm-workspace.yaml  start.bat  start.sh
AGENT-INSTRUCTIONS/: MERMAID-DIAGRAMS-STYLE-GUIDE.md
documentation/: PRODUCT-OVERVIEW.md
documentation/coding-style-guides/: TYPESCRIPT.md
documentation/documentation-style-guides/: MERMAID-DIAGRAMS-STYLE-GUIDE.md
documentation/features/: IMAGE-GENERATION.md  SHIFTING-GRADIENT.md  WORKSPACE-FEATURE.md
infrastructure/init-script/: Dockerfile  README.md  package.json  setup-env.ts
infrastructure/pulumi/: Dockerfile  package.json
random-useful-things/ai-chat-thread-boundary-ui/: README.md  boundary-styles.scss  boundaryIndicator.ts
services/llm-api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  pyrightconfig.json
services/llm-api/src/: config.py  main.py
services/llm-api/src/NATS/subscriptions/: ai_interaction_subjects.py
services/llm-api/src/nats_client/: client.py
services/llm-api/src/prompts/: __init__.py  anthropic_code_block_hack.txt  image_generation_instructions.txt  system.txt
services/llm-api/src/providers/: base.py  registry.py
services/llm-api/src/providers/anthropic/: provider.py
services/llm-api/src/providers/google/: provider.py
services/llm-api/src/providers/openai/: provider.py
services/llm-api/src/services/: usage_reporter.py
services/llm-api/src/tools/: image_generation.py  image_router.py
services/llm-api/src/utils/: attachments.py
(+306 files in other folders)
